adress:hover & statistic align fix

--- a/source/sass/common/contact-block.scss
+++ b/source/sass/common/contact-block.scss
@@ -154,6 +154,10 @@
     }
 }
 
+.contact-block__link--unhover:hover {
+    opacity: unset;
+}
+
 .contact-block__sublist{
     @include list-destroy;
     @media(min-width: 768px){
